--- a/petmatch-frontend/index.html
+++ b/petmatch-frontend/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/src/assets/LogoSinFondo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetMatch</title>
+
+    <!-- Preconectar a Google Fonts para mejorar la velocidad de carga -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Cargar Open Sans -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Cargar Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
