Nuevas ideas para la app y ajustes front

--- a/petmatch-frontend/index.html
+++ b/petmatch-frontend/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetMatch</title>
 
-    <!-- Preconectar a Google Fonts para mejorar la velocidad de carga -->
+    <!-- Preconectar a Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Cargar Open Sans -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Cargar Nunito: Regular (400), SemiBold (600), Bold (700), ExtraBold (800) -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Cargar Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
